# Modern_cpp

./: .gitmodules  README.md
CMake/: CMakeLists.txt  README.md  build.sh  configure.sh  main.cpp  run.sh
CMake/adder/: adder.cpp  adder.h
cmake_proj/: .CMakeLists.txt.swp  CMakeLists.txt
cmake_proj/src/: CMakeLists.txt  blah.cpp  blah.h  hello.cpp  hello.h  main.cpp
cmake_proj/tests/: CMakeLists.txt  test_blah.cpp
home_work_1/: .gitignore  Makefile  README.md  Sales_item.h  main.cc
homework-2/: CMakeLists.txt
homework-2/src/igg_image/: CMakeLists.txt  image.h  main.cpp
igg_image/data/: img.pgm
igg_image/src/: CMakeLists.txt
igg_image/src/igg_image/: CMakeLists.txt  image.h  io_tools.cpp  io_tools.h  main.cpp
